# flupy

./: .appveyor.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  TEST_COVERAGE_ANALYSIS.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  scent.py  setup.py
.circleci/: config.yml
.github/workflows/: diff_comment.yml  mypyc.yml  pre-commit_hooks.yaml  test.yml  test_mypyc.yml
benchmark/: test_benchmark.py
chainable/: __init__.py  __main__.py  chainable.py  chainable.pyx  cli.py
chainable/tests/: test_utils.py
docs/: Makefile  api.rst  cli.rst  conf.py  design_influances.rst  flupy.cli.rst  flupy.rst  index.md  index.rst  influances.rst  license.rst  modules.rst  versions.rst  welcome.rst
docs/_build/doctrees/: environment.pickle  flupy.cli.doctree  flupy.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  flupy.cli.html  flupy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: documentation_options.js
docs/about/: license.md
flupy/: __init__.py  fluent.py
flupy/cli/: .cli.py.swp  cli.py  lazy_import.py  utils.py
src/flupy/: __init__.py  fluent.py
src/flupy/cli/: cli.py
src/tests/: test_cli.py  test_cli_utils.py  test_coverage_improvements.py  test_flu.py  test_version.py
tests/: conftest.py  test_benchmark.py  test_chainable.py  test_cli.py  test_cli_utils.py  test_flu.py
