[project]
name = "flupy"
version = "1.2.4"
description = "Fluent data processing in Python - a chainable stream processing library for expressive data manipulation using method chaining"
authors = [{ name = "Oliver Rice", email = "flupy@oliverrice.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/olirice/flupy"
Documentation = "https://flupy.readthedocs.io"

[project.scripts]
flu = "flupy.cli.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pre-commit",
    "mypy",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flupy"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
# benchmark bodies intentionally assign pipeline results without consuming them
"benchmark/*" = ["F841"]

[tool.mypy]
files = ["src/flupy"]
python_version = "3.10"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code"]

[tool.pytest.ini_options]
addopts = "--cov=src/flupy src/tests"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@overload",
    "pass",
]
